# split-monitor-workspaces

./: .clang-format  .clang-tidy  .gitignore  Makefile  README.md  README_es.md  flake.nix  hyprload.toml  hyprpm.toml  meson.build  result  test_config.conf
.github/: Dockerfile
.github/workflows/: build-docker-image.yml  main.yml  release.yml
include/: globals.hpp  helpers.hpp
src/: main.cpp  util.hpp
